:dog: New pages

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {{ $stylesheet := resources.Get "scss/styles.scss" | toCSS | minify | fingerprint "sha512" }}
+    {{ $options := (dict "targetPath" "css/main.css" "outputStyle" "compressed" "enableSourceMap" false) }}
+    {{ $stylesheet := resources.Get "scss/styles.scss" | toCSS $options | minify | fingerprint "sha512" }}
     <link rel="stylesheet" href="{{ $stylesheet.Permalink }}" integrity="{{ $stylesheet.Data.Integrity }}">
     <title>{{ .Title }}</title>
 </head>
