:camel: Adding more form validation attributes

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <ul>
-    {{ range where .Paginator.Pages ".Type" "==" "page" }}
+    {{ range where .Paginator.Pages ".Layout" "==" "default" }}
       <li><a href="{{ .Permalink }}">{{ .Title }}</a></li>
     {{ end }}
 </ul>
