--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,7 +1,11 @@
 {{ define "main" }}
-<ul>
-    {{ range .Pages }}
-    <li><a href="{{ .Permalink }}">{{ .Title }}</a></li>
-    {{ end }}
-</ul>
+<div class="card" style="width: 18rem;">
+    <ul class="list-group list-group-flush">
+        {{ range .Pages }}
+        <li class="list-group-item position-relative">
+            <a class="stretched-link" href="{{ .Permalink }}">{{ .Title }}</a>
+        </li>
+        {{ end }}
+    </ul>
+</div>
 {{ end }}
