--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,1 +1,1 @@
-<p>© 2021 - <strong>{{ .Site.Params.orgName }}</strong>.</p>
+<p class="copyright">© 2021 - <strong>{{ .Site.Params.orgName }}</strong>.</p>
