--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -5,9 +5,12 @@
     <title>{{ .Title }}</title>
 </head>
 <body>
-    <nav></nav>
-    <header class="bg-primary bg-gradient py-5">
-        <div class="container">
+    <header class="py-5">
+        <div class="container d-flex flex-column justify-content-center align-items-center text-center">
+            <figure>
+                {{ $logo := resources.Get "/img/logo-gbi.png" }}
+                <img class="logo" src="{{ $logo.Permalink }}" alt="Logo">
+            </figure>
             <h1 class="text-light">{{ .Title }}</h1>
         </div>
     </header>
@@ -18,7 +21,7 @@
         </div>
     </main>
     <footer class="pt-3 pb-5">
-        <div class="container">
+        <div class="container d-flex justify-content-center text-center">
             {{ partial "footer" . }}
         </div>
     </footer>
