--- a/layouts/page/default.html
+++ b/layouts/page/default.html
@@ -5,24 +5,30 @@
     <title>{{ .Title }} - {{ .Site.Title }}</title>
 </head>
 <body>
-    <header class="bg-primary bg-gradient py-5">
-        <div class="container">
+    <header class="py-5">
+        <div class="container d-flex flex-column justify-content-center align-items-center text-center">
+            <figure>
+                {{ $logo := resources.Get "/img/logo-gbi.png" }}
+                <img class="logo" src="{{ $logo.Permalink }}" alt="Logo">
+            </figure>
             <h1 class="text-light">{{ .Title }}</h1>
         </div>
     </header>
-    <main class="py-5">
+    <main class="pt-3 pb-5">
         <div class="container">
-            <nav class="trails mb-4" aria-label="breadcrumb">
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item" aria-current="page"><a href="/">Awal</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">{{ .Title }}</li>
-                </ol>
-            </nav>
+            <div class="alert alert-secondary mb-4" role="alert">
+                <nav class="trails" aria-label="breadcrumb">
+                    <ol class="breadcrumb mb-0">
+                        <li class="breadcrumb-item" aria-current="page"><a href="/">Awal</a></li>
+                        <li class="breadcrumb-item active" aria-current="page">{{ .Title }}</li>
+                    </ol>
+                </nav>
+            </div>
             {{ .Content }}
         </div>
     </main>
     <footer class="pt-3 pb-5">
-        <div class="container">
+        <div class="container d-flex justify-content-center text-center">
             {{ partial "footer" . }}
         </div>
     </footer>
