:mouse: Update footer section

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -37,30 +37,6 @@ $breadcrumb-divider: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/200
     src: url("/webfonts/RedHatDisplay-VariableFont_wght.ttf") format("truetype");
     font-style: normal;
 }
-@font-face {
-    font-family: "RidleyGrotesk";
-    src: url("/webfonts/RidleyGrotesk-Regular.ttf") format("truetype");
-    font-style: normal;
-    font-weight: normal;
-}
-@font-face {
-    font-family: "RidleyGrotesk Italic";
-    src: url("/webfonts/RidleyGrotesk-Italic.ttf") format("truetype");
-    font-style: italic;
-    font-weight: normal;
-}
-@font-face {
-    font-family: "RidleyGrotesk Bold";
-    src: url("/webfonts/RidleyGrotesk-Bold.ttf") format("truetype");
-    font-style: normal;
-    font-weight: bold;
-}
-@font-face {
-    font-family: "RidleyGrotesk Bold Italic";
-    src: url("/webfonts/RidleyGrotesk-BoldItalic.ttf") format("truetype");
-    font-style: italic;
-    font-weight: bold;
-}
 
 body {
     font-family: "RedHatDisplay", sans-serif;
@@ -84,7 +60,14 @@ footer {
     display: none;
 }
 .logo {
-    height: 5em;
+    img {
+        height: 5em;
+    }
+}
+.logo-multimedia {
+    img {
+        height: 1.75em;
+    }
 }
 .list-group-item {
     a {
