--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,1 +1,7 @@
-<p class="copyright">© 2021 - <strong>{{ .Site.Params.orgName }}</strong>.</p>
+<p class="copyright">© 2021 - <strong>{{ .Site.Params.orgName }}</strong>.<br />Dikembangkan dan dirawat oleh:</p>
+<figure class="logo-multimedia">
+    {{ $multimedia := resources.Get "img/multimedia-b23877.png"}}
+    <a href="https://div.jppm.cc" target="_blank" rel="noopener noreferrer">
+        <img src="{{ $multimedia.Permalink }}" alt="Multimedia GBIPP" />
+    </a>
+</figure>
