--- a/layouts/page/default.html
+++ b/layouts/page/default.html
@@ -28,7 +28,7 @@
         </div>
     </main>
     <footer class="pt-3 pb-5">
-        <div class="container d-flex justify-content-center text-center">
+        <div class="container d-flex flex-column justify-content-center text-center">
             {{ partial "footer" . }}
         </div>
     </footer>
