:tree: Adding more fields

--- a/layouts/page/default.html
+++ b/layouts/page/default.html
@@ -17,7 +17,7 @@
     <main class="pt-3 pb-5">
         <div class="container">
             <div class="alert alert-secondary mb-4" role="alert">
-                <nav class="trails" aria-label="breadcrumb">
+                <nav class="text-small" aria-label="breadcrumb">
                     <ol class="breadcrumb mb-0">
                         <li class="breadcrumb-item" aria-current="page"><a href="/">Awal</a></li>
                         <li class="breadcrumb-item active" aria-current="page">{{ .Title }}</li>
