:tree: Add new form

--- a/layouts/page/selesai.html
+++ b/layouts/page/selesai.html
@@ -2,5 +2,5 @@
 <div class="alert alert-info" role="alert">
     Data berhasil dikirim, pendaftaran selesai. Pihak Sekretariat Jemaat akan menginformasikan <strong>NAJ</strong> atau <strong>Nomor Anggota Jemaat</strong> Anda secepatnya.
 </div>
-<a href="/" class="btn btn-dark">Kembali ke Awal</a>
+{{ .Content }}
 {{ end }}
