--- a/layouts/page/sukses.html
+++ b/layouts/page/sukses.html
@@ -2,5 +2,5 @@
 <div class="alert alert-info" role="alert">
     Data berhasil dikirim dan segera diproses, selanjutnya pihak Sekretariat Jemaat akan menghubungi Anda.
 </div>
-<a href="/" class="btn btn-dark">Kembali ke Awal</a>
+{{ .Content }}
 {{ end }}
