:coconut: Update field content

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,11 +1,18 @@
 {{ define "main" }}
-<div class="card">
-  <ul class="list-group list-group-flush">
-      {{ range where .Paginator.Pages ".Layout" "==" "default" }}
-      <li class="list-group-item position-relative">
-        <a class="stretched-link text-decoration-none" href="{{ .Permalink }}">{{ .Title }}</a>
-      </li>
-      {{ end }}
-  </ul>
+<div class="row">
+  {{ range where .Paginator.Pages ".Layout" "==" "default" }}
+  <div class="col-md-3 col-sm-12 mb-4">
+    <div class="card text-center shadow-sm">
+      <div class="card-body">
+        <figure class="card-icon">
+          <img src="{{ .Params.Img }}" alt="Icon {{ .Title }}">
+        </figure>
+        <a href="{{ .Permalink }}" class="stretched-link text-decoration-none">
+          <h2 class="card-title card-title-home">{{ .Title }}</h2>
+        </a>
+      </div>
+    </div>
+  </div>
+  {{ end }}
 </div>
 {{ end }}
