--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -78,3 +78,11 @@ footer {
 .text-small {
     font-size: small;
 }
+.card-title-home {
+    font-size: 1rem;
+}
+.card-icon {
+    img {
+        height: 3em;
+    }
+}
