--- a/layouts/page/default.html
+++ b/layouts/page/default.html
@@ -5,7 +5,8 @@
     <title>{{ .Title }} - {{ .Site.Title }}</title>
 </head>
 <body>
-    <header class="py-5">
+    {{ $bghome := resources.Get "/img/bg-home.jpeg" }}
+    <header class="py-5" style="background: linear-gradient(to right top, rgba(0 0 0 / 90%),rgba(0 0 0 / 60%)), center / cover no-repeat fixed url('{{ $bghome.Permalink }}');">
         <div class="container d-flex flex-column justify-content-center align-items-center text-center">
             <figure class="logo">
                 {{ $logo := resources.Get "/img/logo-gbi.png" }}
